`HttpServerResponseMapper` for `HttpResponseEntity` should be generated with extensions (#552)